--- a/LUPEngine.vcxproj
+++ b/LUPEngine.vcxproj
@@ -19,24 +19,18 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <None Include="default.frag" />
-    <None Include="default.vert" />
+    <None Include="Shaders\default.frag" />
+    <None Include="Shaders\default.vert" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="EBO.cpp" />
     <ClCompile Include="LUPEngine.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Shader.cpp" />
-    <ClCompile Include="VAO.cpp" />
-    <ClCompile Include="VBO.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="EBO.hpp" />
     <ClInclude Include="LUPEngine.hpp" />
     <ClInclude Include="Shader.hpp" />
-    <ClInclude Include="VAO.hpp" />
-    <ClInclude Include="VBO.hpp" />
     <ClInclude Include="Window.hpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
