--- a/LUPEngine.vcxproj
+++ b/LUPEngine.vcxproj
@@ -25,7 +25,9 @@
   <ItemGroup>
     <ClCompile Include="LUPEngine.cpp" />
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="Shader.cpp" />
+    <ClCompile Include="Shader.cpp">
+      <LanguageStandard Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">stdcpp20</LanguageStandard>
+    </ClCompile>
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
