--- a/LUPEngine.vcxproj.filters
+++ b/LUPEngine.vcxproj.filters
@@ -38,6 +38,9 @@
     <ClCompile Include="Shader.cpp">
       <Filter>Arquivos de Origem</Filter>
     </ClCompile>
+    <ClCompile Include="stb.cpp">
+      <Filter>Arquivos de Origem</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LUPEngine.hpp">
