Transform de shaders e classe para lidar com tempo

--- a/LUPEngine.vcxproj
+++ b/LUPEngine.vcxproj
@@ -29,11 +29,13 @@
       <LanguageStandard Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">stdcpp20</LanguageStandard>
     </ClCompile>
     <ClCompile Include="stb.cpp" />
+    <ClCompile Include="Time.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LUPEngine.hpp" />
     <ClInclude Include="Shader.hpp" />
+    <ClInclude Include="Time.hpp" />
     <ClInclude Include="Window.hpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
