--- a/LUPEngine.vcxproj
+++ b/LUPEngine.vcxproj
@@ -23,6 +23,8 @@
     <None Include="Shaders\default.vert" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Debug.cpp" />
+    <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="LUPEngine.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Shader.cpp">
@@ -33,6 +35,8 @@
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Debug.hpp" />
+    <ClInclude Include="GameObject.hpp" />
     <ClInclude Include="LUPEngine.hpp" />
     <ClInclude Include="Shader.hpp" />
     <ClInclude Include="Time.hpp" />
