--- a/LUPEngine.vcxproj
+++ b/LUPEngine.vcxproj
@@ -25,6 +25,7 @@
   <ItemGroup>
     <ClCompile Include="Debug.cpp" />
     <ClCompile Include="GameObject.cpp" />
+    <ClCompile Include="Input.cpp" />
     <ClCompile Include="LUPEngine.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Shader.cpp">
@@ -37,6 +38,7 @@
   <ItemGroup>
     <ClInclude Include="Debug.hpp" />
     <ClInclude Include="GameObject.hpp" />
+    <ClInclude Include="Input.hpp" />
     <ClInclude Include="LUPEngine.hpp" />
     <ClInclude Include="Shader.hpp" />
     <ClInclude Include="Time.hpp" />
