--- a/LUPEngine.vcxproj
+++ b/LUPEngine.vcxproj
@@ -24,6 +24,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="Component.cpp" />
     <ClCompile Include="Debug.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="Input.cpp" />
@@ -38,6 +39,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.hpp" />
+    <ClInclude Include="Component.hpp" />
     <ClInclude Include="Debug.hpp" />
     <ClInclude Include="GameObject.hpp" />
     <ClInclude Include="Input.hpp" />
