--- a/LUPEngine.vcxproj.filters
+++ b/LUPEngine.vcxproj.filters
@@ -30,6 +30,12 @@
     <None Include="Shaders\skybox.vert">
       <Filter>Arquivos de Recurso\Shaders</Filter>
     </None>
+    <None Include="Shaders\light_cube.vert">
+      <Filter>Arquivos de Recurso\Shaders</Filter>
+    </None>
+    <None Include="Shaders\light_cube.frag">
+      <Filter>Arquivos de Recurso\Shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Main.cpp">
