--- a/LUPEngine.vcxproj
+++ b/LUPEngine.vcxproj
@@ -27,6 +27,9 @@
     <None Include="Shaders\skybox.vert" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Mesh.cpp" />
+    <ClCompile Include="src\Model.cpp" />
+    <ClCompile Include="src\RenderSource.cpp" />
     <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\Component.cpp" />
     <ClCompile Include="src\Debug.cpp" />
@@ -44,6 +47,9 @@
     <ClCompile Include="src\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Mesh.hpp" />
+    <ClInclude Include="src\Model.hpp" />
+    <ClInclude Include="src\RenderSource.hpp" />
     <ClInclude Include="src\Camera.hpp" />
     <ClInclude Include="src\Component.hpp" />
     <ClInclude Include="src\Debug.hpp" />
