Depth buffer, transparência e face culling
A transparência ainda tá bem crua, mal funciona.

--- a/LUPEngine.vcxproj.filters
+++ b/LUPEngine.vcxproj.filters
@@ -36,6 +36,9 @@
     <None Include="Shaders\light_cube.frag">
       <Filter>Arquivos de Recurso\Shaders</Filter>
     </None>
+    <None Include="Shaders\depthTest.frag">
+      <Filter>Arquivos de Recurso\Shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Main.cpp">
