--- a/LUPEngine.vcxproj
+++ b/LUPEngine.vcxproj
@@ -28,6 +28,7 @@
     <None Include="Shaders\skybox.vert" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Rendering.cpp" />
     <ClCompile Include="src\Mesh.cpp" />
     <ClCompile Include="src\Model.cpp" />
     <ClCompile Include="src\RenderSource.cpp" />
@@ -39,15 +40,14 @@
     <ClCompile Include="src\Lighting.cpp" />
     <ClCompile Include="src\LUPEngine.cpp" />
     <ClCompile Include="src\Main.cpp" />
-    <ClCompile Include="src\Shader.cpp">
-      <LanguageStandard Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">stdcpp20</LanguageStandard>
-    </ClCompile>
+    <ClCompile Include="src\Shader.cpp" />
     <ClCompile Include="src\Skybox.cpp" />
     <ClCompile Include="src\stb.cpp" />
     <ClCompile Include="src\Time.cpp" />
     <ClCompile Include="src\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Rendering.hpp" />
     <ClInclude Include="src\Mesh.hpp" />
     <ClInclude Include="src\Model.hpp" />
     <ClInclude Include="src\RenderSource.hpp" />
