--- a/LUPEngine.vcxproj
+++ b/LUPEngine.vcxproj
@@ -19,6 +19,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Shaders\framebuffer.frag" />
+    <None Include="Shaders\framebuffer.vert" />
     <None Include="Shaders\depthTest.frag" />
     <None Include="Shaders\default.frag" />
     <None Include="Shaders\default.vert" />
